--- a/css/styles.css
+++ b/css/styles.css
@@ -1,620 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
+/* Error: expected ";".
+ *   ,
+ * 9 | $fuente-principal: "Montserrat", sans-serif;
+ *   |                  ^
+ *   '
+ *   scss\_variables.scss 9:18  @import
+ *   scss\styles.scss 1:9       root stylesheet */
+
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected ";".\a   \2577 \a 9 \2502  $fuente-principal: "Montserrat", sans-serif;\d\a   \2502                   ^\a   \2575 \a   scss\\_variables.scss 9:18  @import\a   scss\\styles.scss 1:9       root stylesheet';
 }
-
-@font-face {
-  font-family: "Ablation";
-  src: url(../fonts/Ablation_PersonalUse.otf);
-}
-body {
-  background-color: #00111c;
-}
-
-/* HEADER */
-header {
-  background-color: #001523;
-  display: flex;
-  position: sticky;
-  top: 0;
-}
-
-header img {
-  height: 70px;
-  width: 250px;
-}
-
-header a {
-  font-family: "ablation";
-  font-weight: bold;
-  text-decoration: none;
-  color: #edf2fb;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.navbar-brand {
-  padding-left: 30px;
-}
-
-.navbar-collapse {
-  justify-content: end;
-  padding-right: 30px;
-}
-
-.navbar-collapse li {
-  row-gap: 20px;
-}
-
-.navbar {
-  background-color: #001523;
-  width: 100%;
-}
-
-.nav-link {
-  color: #edf2fb;
-  font-weight: 300;
-}
-
-.navbar-toggler {
-  color: #edf2fb;
-}
-
-img {
-  max-width: 100%;
-}
-
-/*titulos pages*/
-h1 {
-  font-family: "Pathway Extreme";
-  font-weight: 200;
-  font-size: 1.7rem;
-  color: #edf2fb;
-}
-
-/* FOOTER */
-#footer {
-  background-color: #002137;
-  margin-top: 20px;
-}
-
-.pie {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #edf2fb;
-}
-
-.pie a {
-  list-style-type: none;
-  text-decoration: none;
-  color: #edf2fb;
-}
-
-@media (max-width: 768px) {
-  .pie {
-    padding-bottom: 15px;
-  }
-}
-.lista-footer {
-  font-family: "ablation", sans-serif;
-  font-weight: bold;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 30px;
-}
-
-.lista-footer li {
-  text-align: center;
-}
-
-@media (max-width: 768px) {
-  .lista-footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    gap: 30px;
-  }
-}
-@media (max-width: 520px) {
-  .lista-footer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-  }
-}
-.redes-sociales {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-}
-
-@media (max-width: 520px) {
-  .redes-sociales {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-    gap: 30px;
-  }
-}
-.direccion {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  text-align: right;
-  padding-right: 10px;
-}
-
-.direccion a {
-  text-decoration: none;
-  color: #edf2fb;
-}
-
-.derechos {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  text-align: left;
-  padding-top: 10px;
-}
-
-.derechos p {
-  color: #edf2fb;
-}
-
-/* NUEVO INDEX */
-/* BANNER PRINCIPAL */
-.banner {
-  background-image: url(../img/casa1.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-attachment: fixed;
-  height: 70vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-}
-
-.banner h1 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  color: #001523;
-  text-align: center;
-  background-color: rgba(197, 192, 192, 0.4862745098);
-}
-
-.intro {
-  color: #edf2fb;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  text-align: center;
-  font-weight: normal;
-  padding: 60px 60px 60px 60px;
-}
-
-.padre-index {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-@media (max-width: 768px) {
-  .padre-index {
-    display: grid;
-  }
-}
-.index-pag {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-  background-color: #001a2c;
-  color: #edf2fb;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-}
-
-.index-pag h3 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  margin-bottom: 30px;
-}
-
-.index-pag img {
-  width: 400px;
-  height: 300px;
-}
-
-@media (max-width: 520px) {
-  .index-pag {
-    display: grid;
-    grid-template-rows: 1, 1fr;
-    justify-items: center;
-    padding-right: 0px;
-  }
-}
-@media (max-width: 768px) {
-  .index-pag img {
-    width: 250px;
-    height: 200px;
-  }
-}
-.parrafo-index {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-/* NOSOTROS */
-.titulo-nos {
-  padding: 80px 80px 80px 80px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-}
-
-.text-muted {
-  color: rgba(237, 242, 251, 0.9019607843);
-}
-
-.banner-nos {
-  background-image: url(../img/nos-banner.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-attachment: fixed;
-  height: 60vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.banner-nos h2 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  color: #001523;
-  text-align: center;
-  background-color: rgba(229, 214, 214, 0.6705882353);
-}
-
-.nos-padre {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #001a2c;
-}
-
-@media (max-width: 768px) {
-  .nos-padre {
-    display: grid;
-    grid-template-columns: 1;
-    justify-content: center;
-  }
-}
-.nos-texto {
-  color: #edf2fb;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  text-align: justify;
-  padding-left: 100px;
-  padding-right: 100px;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  gap: 65px;
-}
-
-@media (max-width: 520px) {
-  .nos-texto {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-.nos-img {
-  padding-right: 40px;
-  padding-top: 50px;
-  padding-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 45px;
-}
-
-@media (max-width: 768px) {
-  .nos-img {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-}
-@media (max-width: 520px) {
-  .nos-img img {
-    height: 290px;
-    width: 460px;
-  }
-}
-.nos-equipo {
-  color: #edf2fb;
-  font-family: "Montserrat", sans-serif;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding-top: 80px;
-}
-
-.titulo-equipo {
-  display: flex;
-  justify-content: start;
-  padding-left: 40px;
-  font-weight: 300;
-}
-
-.equipo h5 {
-  font-weight: 400;
-  padding-left: 60px;
-}
-
-@media (max-width: 768px) {
-  .titulo-equipo {
-    display: grid;
-    justify-content: center;
-    padding: 0px;
-  }
-}
-@media (max-width: 768px) {
-  .equipo h5 {
-    display: grid;
-    justify-items: center;
-    padding: 0px;
-  }
-}
-.equipo-padre {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  text-align: center;
-}
-
-@media (max-width: 480px) {
-  .equipo-padre {
-    display: grid;
-    grid-template-columns: 1;
-    justify-items: center;
-  }
-}
-@media (min-width: 481px) {
-  .equipo-padre {
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-  }
-}
-@media (min-width: 768px) {
-  .equipo-padre {
-    grid-template-columns: repeat(4, 4fr);
-  }
-}
-.hijo-equipo i {
-  font-size: 2.5rem;
-}
-
-.hijo-equipo p {
-  font-size: 1.2rem;
-  padding-top: 30px;
-}
-
-/* PAGINA PROYECTOS */
-.titulo-proy {
-  padding: 80px 80px 80px 80px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-}
-
-.text-muted {
-  color: rgba(237, 242, 251, 0.9019607843);
-}
-
-.container-cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-}
-
-@media (min-width: 768px) {
-  .container-cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-  }
-}
-@media (min-width: 992px) {
-  .container-cards {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-.card {
-  max-width: 100%;
-}
-
-.card-img-top {
-  height: 300px;
-}
-
-.casas h3 {
-  font-family: "Montserrat", sans-serif;
-  color: #edf2fb;
-}
-
-.casas iframe {
-  display: flex;
-  padding-top: 20px;
-  margin-left: 40px;
-}
-
-.edificios {
-  margin-top: 10px;
-}
-
-.edificios h3 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: #edf2fb;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  margin-left: 30px;
-}
-
-.edificios iframe {
-  display: flex;
-  padding-top: 20px;
-  margin-left: 40px;
-}
-
-.oficinas {
-  margin-top: 10px;
-  margin-bottom: 70px;
-}
-
-.oficinas h3 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: #edf2fb;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  margin-left: 30px;
-}
-
-/* PAGINA SERVICIOS */
-.titulo-serv {
-  padding: 80px 80px 80px 80px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-}
-
-.text-muted {
-  color: rgba(237, 242, 251, 0.9019607843);
-}
-
-.servicios {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  padding-left: 30px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300px;
-  color: #edf2fb;
-}
-
-.lista-serv {
-  background-image: url(../img/plano6.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 50% 70%;
-  background-position-y: center;
-  margin-right: 30px;
-  padding-top: 50px;
-}
-
-.lista-serv ul {
-  margin-left: 100px;
-  margin-bottom: 40px;
-}
-
-.lista-serv li {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  color: #edf2fb;
-  list-style: none;
-  margin-bottom: 20px;
-}
-
-.proceso {
-  padding-top: 50px;
-  margin-bottom: 70px;
-  margin-right: 30px;
-  background-image: url(../img/contruccion11.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 50% 90%;
-  background-position-y: center;
-}
-
-.proceso h2 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: #edf2fb;
-  text-align: left;
-  margin-left: 30px;
-  margin-bottom: 50px;
-}
-
-.proceso ol {
-  margin-left: 100px;
-}
-
-.proceso li {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  color: #edf2fb;
-  margin-bottom: 20px;
-}
-
-/* PAGINA CONTACTO */
-.titulo-cont {
-  padding: 80px 80px 80px 80px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-}
-
-.text-muted {
-  color: rgba(237, 242, 251, 0.9019607843);
-}
-
-.iframe iframe {
-  width: 100%;
-  height: 250px;
-  margin-top: 40px;
-  margin-left: 0px;
-}
-
-.padre-form {
-  font-family: "Montserrat", sans-serif;
-  color: #edf2fb;
-  font-weight: 300;
-}
-
-.padre-form h3 {
-  padding-left: 30px;
-}
-
-.formulario {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  height: 400px;
-  width: 600px;
-  margin: 30px 30px 30px 30px;
-}
-
-label {
-  color: #edf2fb;
-  margin-right: 20px;
-}
-
-/*# sourceMappingURL=styles.css.map */
