agregando nuevos archivos scss

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,9 +3,8 @@ $bg-body1: #00111c;
 $bg-body2: #001a2c;
 $header-color: #001523;
 $footer-color: #002137;
-$font-color: #edf2fb
+$font-color: #edf2fb;
 
-//TITULOS
+//FUENTE
 $fuente-principal: "Montserrat", sans-serif;
-
-
+$titulo-fuente: "Montserrat", sans-serif 300;
