--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -21,18 +21,15 @@ header{
 
     img {
         height: 70px;
-        width: 250px;  
+        width: 250px;  }
+}
 
-        a{
-            font-family: 'ablation';
+header a{
+            font-family: 'Ablation', sans-serif;
             font-weight: bold;
             text-decoration: none;
             color: $font-color;
-
         }
-    }
-}
-
 
 ul{
     list-style-type: none;
@@ -62,14 +59,12 @@ font-weight: 300;
 }
 
 .navbar-toggler{
-    color: $font-color;
+    color: $font-color 
 }
 
 img{
     max-width: 100%;
 }
-
-   
 
 /* FOOTER */
 
@@ -79,10 +74,7 @@ img{
 }
 
 .pie{
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    @include flex-column-center;
     align-items: center;
     color: $font-color;
 
@@ -185,9 +177,7 @@ img{
     background-attachment: fixed;
     height: 70vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
+   @include flex-column-center;
     align-items: start;
          
         h1{
@@ -239,13 +229,13 @@ img{
               font-family: $fuente-principal;
               font-weight: 500;
               margin-bottom: 30px;
+            }
+}
             
-            img{
+.index-pag img{
                 width: 400px;
                 height: 300px;
              }
-    }
-}
 
 
 @media (max-width:520px){
