--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -16,18 +16,19 @@
     background-attachment: fixed;
     height: 60vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
+   @include flex-column-center;
     align-items: center;
+    
+        h2{
+            font-family: $fuente-principal;
+            font-weight:500;
+            color: #001523;
+            text-align: center;
+            background-color: #e5d6d6ab;
+        }
 }
-.banner-nos h2{
-    font-family: $fuente-principal;
-    font-weight:500;
-    color: #001523;
-    text-align: center;
-    background-color: #e5d6d6ab;
-}
+
+ 
 
 .nos-padre{
     display: flex;
