--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -14,44 +14,67 @@
     flex-direction: column;
     align-items:start ;
     padding-left: 30px;
-    font-family: 'Montserrat',sans-serif;
-    font-weight: 300px;
-    color: $font-color;
-
+        p{
+         font-family: 'Montserrat',sans-serif;
+         font-weight: 300px; 
+         color: $font-color;
+        }
 }
 
-.lista-serv{
-    background-image: url(../img/plano6.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size:50% 70% ;
-    background-position-y: center;
-    margin-right: 30px;
-    padding-top: 50px;
+#lista-servicios{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    justify-items: center;
+    padding: 70px;
+    background-color: $bg-body2;
 
-        ul{
-         margin-left: 100px;
-         margin-bottom: 40px;
-
-         li{
+        h4{
             color: $font-color;
-            font-family: 'Montserrat',sans-serif;
-            font-weight: 200;
-            list-style: none;
-            margin-bottom: 20px;
+            font-size: 20px;
+            font-weight: 300;
+            justify-content: center;
+    }
+    i{
+        color: $font-color;
+        font-size: 2.5rem;
+        justify-content: center;
+        align-items: center;
+    }
+    p{
+        color: $font-color2;
+        font-size: 16px;
+        text-align: justify;
+    }
 }
+
+@media (max-width:768px){
+    #lista-servicios {
+         display: grid;
+         grid-template-columns: repeat(2, 1fr);
+         gap: 10px;
+         justify-items: center;
+     }   
 }
+
+@media (max-width:520px) {
+    #lista-servicios{
+        grid-template-columns: 1;
+        gap: 10px;
+        justify-items: center;
+     }
 }
+
+.cajas-serv{
+    @include flex-column-center
+}
+
 
 .proceso{
     padding-top: 50px;
     margin-bottom: 70px;  
     margin-right: 30px;
-    background-image: url(../img/contruccion11.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size:50% 90% ;
-    background-position-y: center;
+    
 
     h2{ 
         font-family: 'Montserrat',sans-serif;
@@ -61,15 +84,66 @@
         margin-left: 30px;
         margin-bottom: 50px;
     
-        ol{
-            margin-left: 100px;
-        
-            li{
-                font-family: 'Montserrat',sans-serif;
-                font-weight: 200;
-                color: $font-color;
-                margin-bottom: 20px;
-            }
-        }
+       
     }
 }
+#carouselWithCaptions{
+   margin: 0 auto;
+    height: 500px;
+    width: 800px ;
+    z-index: -1;
+}
+
+@media (max-width:991px){
+    #carouselWithCaptions{
+        height: 450px ;
+        width: 650px;
+    }
+}
+
+@media (max-width:768px){
+    #carouselWithCaptions{
+        height: 350px ;
+        width: 550px;
+    }
+}
+
+@media (max-width:520px){
+    #carouselWithCaptions{
+        height: 350px ;
+        width: 450px;
+    }
+}
+
+.carousel-caption{
+    background-color:rgba(240, 242, 244, 0.53) ;
+        h5,p{ 
+            color: $bg-body2;
+        }
+} 
+
+.carousel-inner img{
+        height: 500px;
+        width: 800px;
+    }
+
+@media (max-width:991px){
+        .carousel-inner{
+            height: 450px ;
+            width: 650px;
+        }
+    }
+    
+@media (max-width:768px){
+        .carousel-inner{
+            height: 300px ;
+            width: 450px;
+        }
+    }
+    
+@media (max-width:520px){
+        .carousel-inner{
+            height: 250px ;
+            width: 350px;
+            }
+    }
