--- a/css/styles.css
+++ b/css/styles.css
@@ -540,19 +540,25 @@ small {
   text-align: justify;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
   #lista-servicios {
     display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    justify-items: center;
+  }
+}
+@media (min-width: 577px) {
+  #lista-servicios {
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     justify-items: center;
   }
 }
-@media (max-width: 520px) {
+@media (min-width: 992px) {
   #lista-servicios {
-    grid-template-columns: 1;
-    gap: 10px;
-    justify-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 }
 .cajas-serv {
@@ -564,41 +570,44 @@ small {
 
 .proceso {
   padding-top: 50px;
-  margin-bottom: 70px;
-  margin-right: 30px;
 }
 .proceso h2 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #edf2fb;
   text-align: left;
-  margin-left: 30px;
-  margin-bottom: 50px;
 }
 
 #carouselWithCaptions {
+  margin-right: 0px;
   margin: 0 auto;
   height: 500px;
   width: 800px;
   z-index: -1;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 576px) {
   #carouselWithCaptions {
-    height: 450px;
+    height: 200px;
+    width: 300px;
+  }
+}
+@media (min-width: 577px) {
+  #carouselWithCaptions {
+    height: 300px;
+    width: 500px;
+  }
+}
+@media (min-width: 768px) {
+  #carouselWithCaptions {
+    height: 400px;
     width: 650px;
   }
 }
-@media (max-width: 768px) {
+@media (min-width: 992px) {
   #carouselWithCaptions {
-    height: 350px;
-    width: 550px;
-  }
-}
-@media (max-width: 520px) {
-  #carouselWithCaptions {
-    height: 350px;
-    width: 450px;
+    height: 450px;
+    width: 900px;
   }
 }
 .carousel-caption {
@@ -608,27 +617,41 @@ small {
   color: #001a2c;
 }
 
-.carousel-inner img {
-  height: 500px;
-  width: 800px;
+@media (max-width: 576px) {
+  .carousel-caption {
+    height: 100px;
+    width: 200px;
+  }
+  .carousel-caption p {
+    font-size: small;
+  }
+}
+img {
+  size: 100%, 100%;
 }
 
-@media (max-width: 991px) {
-  .carousel-inner {
-    height: 450px;
+@media (max-width: 576px) {
+  .carousel-inner img {
+    height: 200px;
+    width: 300px;
+  }
+}
+@media (min-width: 577px) {
+  .carousel-inner img {
+    height: 300px;
+    width: 500px;
+  }
+}
+@media (min-width: 768px) {
+  .carousel-inner img {
+    height: 400px;
     width: 650px;
   }
 }
-@media (max-width: 768px) {
-  .carousel-inner {
-    height: 300px;
-    width: 450px;
-  }
-}
-@media (max-width: 520px) {
-  .carousel-inner {
-    height: 250px;
-    width: 350px;
+@media (min-width: 992px) {
+  .carousel-inner img {
+    height: 450px;
+    width: 900px;
   }
 }
 .titulo-cont {
